log
do., 20 de mar. de 2022 19:37:26: 
 tests:  0|6
total_score: 0/70
87804b2
do., 20 de mar. de 2022 21:27:07: 
 list.c | 49 +++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 39 insertions(+), 10 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:3: error: expected ';' before 'return'
   return lista->prev->data;
   ^~~~~~
list.c: In function 'nextList':
list.c:46:11: error: 'List {aka struct List}' has no member named 'next'
   if(lista->next=NULL){return NULL;}
           ^~
list.c:47:23: error: 'List {aka struct List}' has no member named 'next'
   lista->current=lista->next;
                       ^~
list.c:48:15: error: 'List {aka struct List}' has no member named 'next'
   return lista->next->data;
               ^~
list.c: In function 'prevList':
list.c:59:23: error: 'List {aka struct List}' has no member named 'prev'
   lista->current=lista->prev;
                       ^~
list.c:60:15: error: 'List {aka struct List}' has no member named 'prev'
   return lista->prev->data;
               ^~
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'prevList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3cf8ada
do., 20 de mar. de 2022 21:36:13: 
 list.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:3: error: expected ';' before 'return'
   return lista->head->data;
   ^~~~~~
list.c: In function 'nextList':
list.c:46:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(lista->current->next=NULL)
   ^~
list.c:49:15: error: 'List {aka struct List}' has no member named 'next'
   return lista->next->data;
               ^~
list.c: In function 'lastList':
list.c:58:5: error: expected ';' before 'return'
     return lista->tail->data;
     ^~~~~~
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'lastList':
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
69dca05
do., 20 de mar. de 2022 21:38:06: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:46:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(lista->current->next=NULL){return NULL;}
   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
81e85ba
do., 20 de mar. de 2022 21:44:09: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:36:15: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return lista->head;
          ~~~~~^~~~~~
list.c: In function 'nextList':
list.c:46:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(lista->current->next=NULL){return NULL;}
   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
05662ff
do., 20 de mar. de 2022 21:44:50: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:46:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(lista->current->next=NULL){return NULL;}
   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
87d565b
do., 20 de mar. de 2022 21:52:34: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fdba601
